--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^11.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.2.1",
     "class-transformer": "^0.5.1",
